# MipUtils

./: CMakeLists.txt  README.md
src/: main.cpp
src/lib/: coefs.cpp  coefs.hpp
src/scripts/: mip-coefs.cpp  mip-convert.cpp
